--- a/GoalSetting/app/src/main/res/values/dimens.xml
+++ b/GoalSetting/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="header_size">22sp</dimen>
+    <dimen name="text_size">18sp</dimen>
+    <dimen name="current_value_size">15sp</dimen>
+    <dimen name="goal_size">75dp</dimen>
+    <dimen name="goal_heading_size">32sp</dimen>
 </resources>
