--- a/GoalSetting/app/src/main/res/layout/category_row.xml
+++ b/GoalSetting/app/src/main/res/layout/category_row.xml
@@ -9,10 +9,11 @@
     android:id="@+id/tempid">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/titleCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        app:cardBackgroundColor="@color/colorTwo">
+        app:cardBackgroundColor="#FFFF">
 
         <TextView
             android:id="@+id/categoryTitle"
