--- a/GoalSetting/app/src/main/res/layout/category_row.xml
+++ b/GoalSetting/app/src/main/res/layout/category_row.xml
@@ -13,7 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        app:cardBackgroundColor="#FFFF">
+        app:cardBackgroundColor="@color/colorTwo"
+        app:cardElevation="4dp"
+        app:cardCornerRadius="0dp">
 
         <TextView
             android:id="@+id/categoryTitle"
