--- a/GoalSetting/app/src/main/res/values/colors.xml
+++ b/GoalSetting/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#264653</color>
     <color name="colorOne">#264653</color>
     <color name="colorTwo">#2A9D8F</color>
     <color name="colorThree">#E9C46A</color>
