--- a/GoalSetting/app/src/main/res/layout/goal_row.xml
+++ b/GoalSetting/app/src/main/res/layout/goal_row.xml
@@ -36,26 +36,35 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textCurrentValue"
-                    android:layout_width="0dp"
+                    android:id="@+id/textProgress"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="7dp"
                     android:paddingHorizontal="8dp"
                     android:paddingVertical="6dp"
                     android:text="Progress"
-                    android:textSize="@dimen/current_value_size"
-                    android:layout_weight=".24"/>
+                    android:textSize="@dimen/current_value_size" />
 
                 <ProgressBar
-                    android:id="@+id/my_progressBar"
+                    android:id="@+id/progressBar"
                     style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginRight="10dp"
+                    android:layout_weight=".70"
                     android:indeterminate="false"
                     android:max="100"
-                    android:progress="40"
-                    android:layout_weight=".76"/>
+                    android:progress="40" />
+
+                <TextView
+                    android:id="@+id/textCurrentValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="7dp"
+                    android:paddingHorizontal="8dp"
+                    android:paddingVertical="6dp"
+                    android:text="22/20"
+                    android:textSize="@dimen/current_value_size" />
 
             </LinearLayout>
 
