--- a/GoalSetting/app/src/main/res/layout/goal_row.xml
+++ b/GoalSetting/app/src/main/res/layout/goal_row.xml
@@ -35,17 +35,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/removegoalbutton"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    app:icon="@drawable/ic_delete_black_24dp"
-                    />
-
                 <TextView
                     android:id="@+id/textProgress"
                     android:layout_width="wrap_content"
@@ -109,6 +98,7 @@
                     android:hint="Enter Current Value">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/updateText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
@@ -119,6 +109,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     style="@style/Widget.AppCompat.Button.Colored"
+                    android:id="@+id/updateButton"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
