fixed transparent notification bar in addgoal

--- a/GoalSetting/app/src/main/res/layout/activity_addnewgoal.xml
+++ b/GoalSetting/app/src/main/res/layout/activity_addnewgoal.xml
@@ -4,24 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    >
+    android:fitsSystemWindows="true">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
-        android:background="@color/colorTopBar">
+        android:background="@color/colorTopBar"
+        android:fitsSystemWindows="true"
+        >
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorOne"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:layout_marginTop="25dp"
+            />
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_addnewgoal" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
