--- a/GoalSetting/app/src/main/res/layout/add_goal.xml
+++ b/GoalSetting/app/src/main/res/layout/add_goal.xml
@@ -7,11 +7,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
+    android:tag="AddGoal"
     >
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/black" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -19,11 +16,34 @@
         android:background="?attr/selectableItemBackground">
 
 
-     <com.google.android.material.button.MaterialButton
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:text="Add"/>
+        <TextView
+            android:id="@+id/tv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Goal"
+            android:textSize="30sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
 
+        <TextView
+            android:id="@+id/tv2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Goal"
+            android:textSize="30sp"
+            app:layout_constraintTop_toBottomOf="@+id/tv1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+        <TextView
+            android:id="@+id/tv3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Goal"
+            android:textSize="30sp"
+            app:layout_constraintTop_toBottomOf="@id/tv2"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
