--- a/GoalSetting/app/src/main/res/values/colors.xml
+++ b/GoalSetting/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#1c343d</color>
+    <color name="colorPrimaryDark">#1c343d</color>
     <color name="colorAccent">#264653</color>
+    <color name="colorTopBar">#1c343d</color>
     <color name="colorOne">#264653</color>
     <color name="colorTwo">#2A9D8F</color>
     <color name="colorThree">#E9C46A</color>
