--- a/GoalSetting/app/src/main/res/values/dimens.xml
+++ b/GoalSetting/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="current_value_size">15sp</dimen>
     <dimen name="goal_size">75dp</dimen>
     <dimen name="goal_heading_size">32sp</dimen>
+    <dimen name="add_new_goal_size">28sp</dimen>
 </resources>
